<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="4dp">
<LinearLayout
android:layout_width="match_parent"
android:layout_height="wrap_content"
android:orientation="horizontal"
android:padding="8dp"
android:gravity="center_vertical">>
    <ImageView
        android:id="@+id/id_avatar"
        style="@style/profileImageRound"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_gravity="center_vertical"
        android:layout_margin="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/round_background_profile"
        android:padding="2dp"
        android:src="@drawable/avatar" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <TextView
            android:id="@+id/person_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/nombre_solicitante"
            android:textSize="18sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/adopt_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/quiere_adoptar"
                android:textSize="14sp" />

            <TextView
                android:id="@+id/pet_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_mascota"
                android:textSize="14sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/text_estado_historial"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:layout_marginRight="10dp"
            android:text="@string/txt_estado" />

        <TextView
            android:id="@+id/estado_solicitud"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="10dp"
            android:text="@string/txt_estado_solicitud" />
    </LinearLayout>
</LinearLayout>


</androidx.cardview.widget.CardView>