<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary">



    <TextView
        android:id="@+id/txt_data_one"
        style="@style/textViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_data_ones"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.01" />

    <TextView
        android:id="@+id/txt_data_two"
        style="@style/textViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_data_two"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.079" />

    <TextView
        android:id="@+id/txt_data_three"
        style="@style/textViewEdit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/txt_data_three"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_data_two"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageViewAvatar"
        android:layout_width="174dp"
        android:layout_height="162dp"
        android:background="@drawable/rounded_border"
        android:scaleType="centerCrop"
        android:src="@drawable/avatar"
        app:layout_constraintBottom_toTopOf="@+id/input_nombre"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.476"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_data_three"
        app:layout_constraintVertical_bias="0.079" />

    <EditText
        android:id="@+id/input_nombre"
        style="@style/textViewEditTitle"
        android:layout_width="234dp"
        android:layout_height="52dp"
        android:background="@drawable/border_inputs"
        android:ems="10"
        android:hint="@string/txt_input_name"
        android:inputType="text"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/input_apellido"
        style="@style/textViewEditTitle"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:layout_marginTop="7dp"
        android:background="@drawable/border_inputs"
        android:ems="10"
        android:hint="@string/txt_input_lastname"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_nombre"
        app:layout_constraintVertical_bias="0.039" />

    <EditText
        android:id="@+id/input_telefono"
        style="@style/textViewEditTitle"
        android:layout_width="236dp"
        android:layout_height="52dp"
        android:layout_marginTop="9dp"
        android:background="@drawable/border_inputs"
        android:ems="10"
        android:hint="@string/txt_input_telefono"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_apellido"
        app:layout_constraintVertical_bias="0.075"
        tools:ignore="DuplicateIds" />

    <Button
        android:id="@+id/buttonSeleccionarAvatar"
        style="@style/colorBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:text="@string/txt_btn_avatar"
        app:layout_constraintBottom_toTopOf="@+id/buttonGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_telefono"
        app:layout_constraintVertical_bias="1.0" />

    <Button
        android:id="@+id/buttonGuardar"
        style="@style/colorBtn"
        android:layout_width="354dp"
        android:layout_height="58dp"
        android:layout_marginBottom="52dp"
        android:text="@string/txt_btn_datos"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
